tests/marouter/errors/incomplete_connections/to_missing2of2/errors.marouter
Error: District '2' has no sink.
Error: Loading failed.
Quitting (on error).
